--- a/package.json
+++ b/package.json
@@ -8,6 +8,5 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Roman Kadevich"
 }
